# mixture

./: .gitignore  CMakeLists.txt  Config.h.in  Convert.h  Cylinder.cpp  Cylinder.h  Doxyfile.in  Doxygen  Ellipsoid.cpp  Ellipsoid.h  GeoShape.cpp  GeoShape.h  GeoTetrahedron.cpp  GeoTetrahedron.h  Geometry.cpp  Geometry.h  INSTALL  LICENSE  Makefile  Mathematics.h  MeshTriangle3D.h  Node3D.h  OrthoBrick.cpp  OrthoBrick.h  README  Require.h  TriangularMesh.cpp  TriangularMesh.h
demo/: CMakeLists.txt  README  demo.cpp
headers/: Convert.h  Cylinder.h  Ellipsoid.h  GeoShape.h  GeoTetrahedron.h  Geometry.h  Mathematics.h  MeshTriangle3D.h  Node3D.h  OrthoBrick.h  Param.h  Require.h  TriangularMesh.h
sources/: CMakeLists.txt  Cylinder.cpp  Ellipsoid.cpp  GeoShape.cpp  GeoTetrahedron.cpp  Geometry.cpp  OrthoBrick.cpp  TriangularMesh.cpp
